HOME : 우측 메뉴바 수정, 구독 DB 유효성 검사 등.

--- a/rails/app/views/devise/registrations/edit.html.erb
+++ b/rails/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,11 @@
       <%= f.label :"닉네임" %><br />
       <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true %>
     </div>
+    
+    <div class="field">
+      <%= f.label :"연락처 (- 제외, 숫자만)" %><br />
+      <%= f.text_field :phone_number, class: "devise_noborder", required: true, autofocus: true %>
+    </div>
   
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div><%= resource.unconfirmed_email %> 계정에 대한 인증을 기다리고있습니다.</div>
