--- a/rails/app/views/devise/registrations/new.html.erb
+++ b/rails/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,11 @@
       <%= f.label :"닉네임" %><br />
       <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true %>
     </div>
+    
+    <div class="field">
+      <%= f.label :"연락처 (- 제외, 숫자만)" %><br />
+      <%= f.text_field :phone_number, class: "devise_noborder", required: true, autofocus: true %>
+    </div>
   
     <div class="field">
       <%= f.label :"암호" %>
