--- a/rails/app/views/devise/registrations/edit.html.erb
+++ b/rails/app/views/devise/registrations/edit.html.erb
@@ -2,40 +2,24 @@
   <section class="user-edit-section">
     <h2 class="edit-title">개인정보 수정</h2>
   
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
-  
-    <div class="field">
-      <%= f.label :"이메일" %><br />
-      <%= f.email_field :email, class: "devise_noborder", required: true, autofocus: true, autocomplete: "email" %>
-    </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
     
-    <div class="field">
-      <%= f.label :"닉네임" %><br />
-      <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true %>
-    </div>
+      <div class="field">
+        <%= f.email_field :email, class: "devise_noborder", required: true, autofocus: true, autocomplete: "email", placeholder: "ID"  %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true, placeholder: "Username" %>
+      </div>
     
-    <div class="field">
-      <%= f.label :"연락처 (- 제외, 숫자만)" %><br />
-      <%= f.text_field :phone_number, class: "devise_noborder", required: true, autofocus: true %>
-    </div>
-  
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div><%= resource.unconfirmed_email %> 계정에 대한 인증을 기다리고있습니다.</div>
-    <% end %>
-  
-    <div class="field">
-      <%= f.label :"현재 암호" %> <i>(정보 수정 시 입력해주세요.)</i><br />
-      <%= f.password_field :current_password, class: "devise_noborder", required: true, autocomplete: "off" %>
-    </div>
-  
-    <div class="field">
-      <%= f.label :"변경할 암호" %> <i>(암호 변경을 안할 시 입력하지 않으셔도 됩니다.)</i><br />
-      <%= f.password_field :password, class: "devise_noborder", autocomplete: "off" %>
-      <% if @minimum_password_length %>
-        <br />
-        <em>최소 <%= @minimum_password_length %>글자 이상</em>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div><%= resource.unconfirmed_email %> 계정에 대한 인증을 기다리고있습니다.</div>
       <% end %>
+      
+      <div class="field">
+        <%= f.text_field :phone_number, class: "devise_noborder", required: true, autofocus: true, placeholder: "Phone" %>
+      </div>
     
       <div class="field">
         <%= f.password_field :current_password, class: "devise_noborder", required: true, autocomplete: "off", placeholder: "Current Password" %>
