fix/모달창 - css 수정

--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -840,10 +840,10 @@ main#main {
       font-size: 0.8em;
       position: absolute;
       top: 75px;
-      left: 0;
+      left: 25px;
       width: 100%;
       font-family: 'S-CoreDream-1Thin';
-      color: white;
+      color: gray;
       list-style: none;
       max-height: 250px;
       overflow: hidden;
