--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -919,3 +919,63 @@ main#main {
     }
   }
 }
+
+.page-search-password {
+  h2 {
+    margin-bottom: 5vw;
+    margin-left: 30px;
+    margin-top: 16vh;
+    font-family: 'S-CoreDream-4Regular';
+    font-size: 2.3em;
+    height: fit-content;
+  }  
+  
+  .input-email {
+    font-family: 'S-CoreDream-4Regular';
+    padding-left: 20px;
+    width: 26vw;
+    min-height: 40px;
+    margin-left: 0;
+    margin-right: auto;
+    margin-bottom: 12px;
+    border: solid 1px rgba(24, 24, 24, 0.2);
+    width: 500px;
+  }
+  
+  .actions {
+    margin-right: 160px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .actions input {
+    background-color: transparent;
+    color: black;
+  }
+  
+  .back {
+    float: left;
+    color: #616161;
+    font-size: 12px;
+  }
+  
+  .btn-search-password {
+    border: 0;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: 'S-CoreDream-4Regular';
+  }
+  
+  .actions input:hover {
+    background-color: transparent;
+  }
+  
+  .new-user {
+    margin-left: 11vw;
+  }
+  
+  .btn-search-password:hover {
+    opacity: 0.7;
+  }
+}
