--- a/rails/app/views/devise/passwords/new.html.erb
+++ b/rails/app/views/devise/passwords/new.html.erb
@@ -15,6 +15,6 @@
   
     <div style="margin: 30px 160px 20px 30px;" align="center">
       <%= link_to "이전으로", :back, class: "edit-back", class: "back" %>
-      <%= link_to "회원가입", new_user_registration_path, style: "color: #616161", class: "sign-up" %>
+      <%= link_to "회원가입", new_user_registration_path, style: "color: #616161; float: left; margin-left: 20px;", class: "sign-up" %>
     </div>
 </div>
