--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -27,14 +27,19 @@
   }
   
   .crawling_add_box {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
     background-color: #FF4555;
     padding: 20px;
-    margin-top: 30px;
     font-size: 30px;
-    font-family: S-CoreDream-2ExtraLight;
     height: 300px;
-    postion: relative;
-    margin-top: -150px;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 75px;
+    font-family: 'S-CoreDream-4Regular';
+    word-break: keep-all;
   }
   
   .crawling_add_box:hover {
@@ -42,11 +47,25 @@
   }
   
   .crawling_box {
+    padding-bottom: 75px;
     background-color: white;
     padding: 20px;
-    margin-top: 30px;
-    border: 2px solid #d3d3d3;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    padding: 20px;
     height: 300px;
+    align-items: flex-end;
+    font-family: 'S-CoreDream-4Regular';
+    border: solid 1px #848484;
+    margin: 0 !important;
+  }
+  
+  .crawling_add_box a {
+    color: white;
+    text-decoration: none;
+    font-size: 2vw;
   }
   
   .crawling_box:hover {
@@ -59,12 +78,18 @@
   }
   
   .subscribe-submit {
-    background-color: #14c56b;
+    background-color: #FF4555;
+    margin-right: 17px;
     color: white;
     font-weight: bold;
     border: 0px;
     padding: 5px 15px;
     border-radius: 5px;
+  }
+  
+  .subscribe-submit:hover {
+    background-color: #e00013;
+    outline: none;
   }
   
   .subscribe_on {
@@ -80,11 +105,17 @@
   .subscribe_off {
     background-color: white;
     color: #fb2626;
-    border: 2px solid #fb2626;
     height: 40px;
     text-align: center;
     line-height: 40px;
+    border: 0;
+    margin-left: 2px;
     //margin-top: 43px;
+    width: 100%;
+  }
+  
+  .subscribe_off:hover {
+    background-color: #F4F4F4;
   }
   
   .text-none:hover
@@ -119,6 +150,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    height: calc((100% - 120px) / 5);
+    font-size: 1.3vw;
   }
   
   .background-black_pc {
@@ -143,14 +176,23 @@
   
   /* 카테고리 게시판 상단 Thum 영역(PC) */
   .category_board {
-    background: url('/board_banner_img/board_banner1.jpg') no-repeat fixed;
-    background-size: 100% 70%;
-    background-position: 0px -180px;
+    background: url('/images/post-img.jpg') no-repeat fixed;
+    background-size: cover;
+    background-position: top;
     color: white;
     font-size: 30px;
     text-decoration: none;
     padding: 200px 0px 250px 0px;
     text-align: center;
+    
+    .container {
+      padding: 0;
+      margin-left: 9vw;
+      
+      a {
+       transition: all 0.2s ease-in-out; 
+      }
+    }
   }
   
   /* 카테고리 상단 Thum 영역(모바일) */
@@ -246,12 +288,13 @@
   /* 배너영역 Text */
   .board_title {
     color: white;
+    font-family: 'S-CoreDream-4Regular';
   }
   
   /* 배너영역 Text */
   a.board_title:focus, a.board_title:hover {
     text-decoration: none;
-    color: yellow;
+    color: #aaa;
   }
   
   /* 게시글 제목 input */
@@ -979,4 +1022,98 @@ main#main {
   .btn-search-password:hover {
     opacity: 0.7;
   }
+}
+
+.page-post {
+  width: 100vw;
+  max-width: calc(87vw - 270px);
+  margin-right: auto;
+  margin-left: 9vw;
+  padding: 0;
+  position: relative;
+  top: -170px;
+  left: 0;
+  
+  .user-sidebar-content {
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
+  
+  .page-post-content {
+    display: grid;
+    grid-row-gap: 100px;
+    grid-template-columns: repeat(2, 30vw);
+    grid-template-rows: repeat(2, 30vw);
+    justify-content: space-between;
+    margin: 0;
+  }
+  
+  .crawling_add_box, .crawling_box {
+    min-width: 300px;
+  }
+  
+  .post-contain-box {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff4555;
+    display: flex;
+    align-items: center;
+    padding: 20px 50px;
+    word-break: keep-all;
+  }
+}
+
+
+.move-site {
+  color: #d0d0d0;
+}
+
+.move-site:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.accordion {
+  width: 100% !important;
+}
+
+.accordion:first-of-type {
+  bottom: 0;
+}
+
+.accordion:not(:first-of-type) {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .page-post-content {
+    grid-template-columns: 30vw !important;
+    min-height: 300px;
+  }
+}
+
+.crawling_add_box, .crawling_box {
+  transition: all 0.2s ease-in-out;
+}
+
+.crawling_add_box:hover {
+  box-shadow: none;
+}
+
+.crawling_box:hover {
+  box-shadow: 0 17px 50px rgba(0, 0, 0, 0.19), 0 12px 15px rgba(0, 0, 0, 0.24);
+  border: 1px solid #eee;
+}
+
+.collapse {
+  height: calc(30vw - 120px) !important;
+}
+
+.alarm-div {
+  display: grid;
+  grid-template-areas: "a b" "c d" "e f" "g h";
+  width: 100%;
+  margin: 0;
 }
