--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -13,6 +13,117 @@
  *= require_tree .
  *= require_self
  */
+  /* 폰트 */ 
+  @font-face { font-family: 'S-CoreDream-2ExtraLight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff'); font-weight: normal; font-style: normal; }
+  
+  .font-coredream {
+    font-family: 'S-CoreDream-2ExtraLight'
+  }
+  
+  .font-title-coredream {
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'S-CoreDream-2ExtraLight'
+  }
+  
+  .crawling_add_box {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    background-color: #FF4555;
+    padding: 20px;
+    font-size: 30px;
+    height: 300px;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 75px;
+    font-family: 'S-CoreDream-4Regular';
+    word-break: keep-all;
+  }
+  
+  .crawling_add_box:hover {
+    box-shadow: 4px 4px 1px rgba(145, 145, 145, 0.37);
+  }
+  
+  .crawling_box {
+    padding-bottom: 75px;
+    background-color: white;
+    padding: 20px;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    padding: 20px;
+    height: 300px;
+    align-items: flex-end;
+    font-family: 'S-CoreDream-4Regular';
+    border: solid 1px #848484;
+    margin: 0 !important;
+  }
+  
+  .crawling_add_box a {
+    color: white;
+    text-decoration: none;
+    font-size: 2vw;
+  }
+  
+  .crawling_box:hover {
+    box-shadow: 4px 4px 1px rgba(145, 145, 145, 0.37);
+  }
+  
+  .text-none {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .subscribe-submit {
+    background-color: #FF4555;
+    margin-right: 17px;
+    color: white;
+    font-weight: bold;
+    border: 0px;
+    padding: 5px 15px;
+    border-radius: 5px;
+  }
+  
+  .subscribe-submit:hover {
+    background-color: #e00013;
+    outline: none;
+  }
+  
+  .subscribe_on {
+    background-color: #fb2626;
+    color: white;
+    border: 0px solid black;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    //margin-top: 43px;
+  }
+  
+  .subscribe_off {
+    background-color: white;
+    color: #fb2626;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border: 0;
+    margin-left: 2px;
+    //margin-top: 43px;
+    width: 100%;
+  }
+  
+  .subscribe_off:hover {
+    background-color: #F4F4F4;
+  }
+  
+  .text-none:hover
+  {
+    color: white;
+    text-decoration: none;
+  }
+ 
  .login_box {
     background-color: white;
     box-shadow: 8px 8px 1px 1px rgba(0, 0, 0, 0.16);
@@ -39,6 +150,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    height: calc((100% - 120px) / 5);
+    font-size: 1.3vw;
   }
   
   .background-black_pc {
@@ -63,14 +176,23 @@
   
   /* 카테고리 게시판 상단 Thum 영역(PC) */
   .category_board {
-    background: url('/board_banner_img/board_banner1.jpg') no-repeat fixed;
-    background-size: 100% 70%;
-    background-position: 0px -180px;
+    background: url('/images/post-img.jpg') no-repeat fixed;
+    background-size: cover;
+    background-position: top;
     color: white;
     font-size: 30px;
     text-decoration: none;
-    padding: 150px 0px 80px 0px;
+    padding: 200px 0px 250px 0px;
     text-align: center;
+    
+    .container {
+      padding: 0;
+      margin-left: 9vw;
+      
+      a {
+       transition: all 0.2s ease-in-out; 
+      }
+    }
   }
   
   /* 카테고리 상단 Thum 영역(모바일) */
@@ -166,12 +288,13 @@
   /* 배너영역 Text */
   .board_title {
     color: white;
+    font-family: 'S-CoreDream-4Regular';
   }
   
   /* 배너영역 Text */
   a.board_title:focus, a.board_title:hover {
     text-decoration: none;
-    color: yellow;
+    color: #aaa;
   }
   
   /* 게시글 제목 input */
@@ -309,3 +432,688 @@
     border-top: 1px dashed #1e9262;
     padding: 10px;
   }
+  
+main#main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+  min-width: 100vw;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.search-section {
+  position: relative;
+  width: 1100px;
+  max-width: 55vw;
+}
+
+.search-btn {
+  transition: all 0.2s ease-in-out;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.search-btn:hover {
+  filter: brightness(60%);
+}
+
+.search-section-title {
+  position: absolute;
+  top: 27%;
+  left: 11%;
+  color: black;
+  font-family: 'S-CoreDream-2ExtraLight';
+  font-size: 2.5rem;
+  word-break: keep-all;
+  z-index: 10;
+}
+
+.search-section-subtitle {
+  font-family: 'S-CoreDream-4Regular';
+  color: black;
+  font-size: 2.5rem;
+  z-index: 10;
+}
+
+.search-wrap {
+  display: flex;
+  top: 57%;
+  left: 0;
+  width: auto;
+  margin: 0 auto;
+  position: relative;
+  border-bottom: 3px solid #ff4555;
+  width: auto;
+  margin: 0 11%;
+  padding-bottom: 10px;
+  justify-content: space-between;
+  z-index: 10;
+  
+  .search-input-text {
+    border: 0;
+    font-size: 1.2em;
+    width: 100%;
+    font-family: 'S-CoreDream-4Regular';
+    color: #181818;
+  }
+}
+
+.user-sidebar * {
+  user-select: none;
+}
+
+.user-sidebar {
+  overflow: scroll;
+  background-image: url(/images/main-img.jpg);
+  background-size: cover;
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+}
+
+.user-sidebar-content {
+  position: relative;
+  width: 260px;
+  height: 100vh;
+  margin-left: auto;
+  background-color: #212529d4;
+}
+
+.text-logo {
+  position: absolute;
+  top: 34px;
+  left: 33px;
+}
+
+.user-edit {
+  left: 30px;
+  top: 140px;
+  width: 95px;
+  height: 40px;
+  position: absolute;
+  cursor: pointer;
+  z-index: 20;
+}
+
+.user-img {
+  position: absolute;
+  top: 147px;
+  left: 34px;
+  background-color: white;
+  border-radius: 100%;
+}
+
+.user-name {
+  color: white;
+  font-family: 'S-CoreDream-4Regular';
+  position: absolute;
+  top: 150px;
+  left: 74px;
+  font-size: 17px;
+}
+
+.user-logout {
+  color: white;
+  position: absolute;
+  top: 154px;
+  right: 36px;
+  font-size: 12px;
+  transition: all 0.2s ease-in-out;
+}
+
+.user-logout:hover {
+  color: #aaa;
+  text-decoration: none;
+}
+
+.history-category-wrap {
+  position: relative;
+  top: 200px;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 240px);
+}
+
+.history-list::-webkit-scrollbar {
+    width: 0;
+}
+
+.user-history {
+  display: flex;
+  color: white;
+  font-family: 'S-CoreDream-4Regular';
+  position: relative;
+  top: 10px;
+  left: 0;
+  width: 100%;
+  font-size: 17px;
+  height: 50px;
+  padding-left: 39px;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.user-history:hover {
+  background-color: hsla(0, 0%, 100%, 0.2);
+}
+
+.history-list {
+  position: relative;
+  top: 34px;
+  left: 0;
+  width: 100%;
+  font-family: 'S-CoreDream-1Thin';
+  color: white;
+  list-style: none;
+  max-height: 100px;
+  overflow: hidden;
+  margin: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.history-list li, .history-list li a {
+  color: white;
+  height: 20px;
+  margin-bottom: 5px;
+  transition: all 0.2s ease-in-out;
+  font-size: 15px;
+}
+
+.history-list li a:hover {
+  text-decoration: none;
+  color: #aaa;
+  cursor: pointer;
+}
+
+.history-list.active {
+  max-height: none;
+  height: calc(100% - 10!  0px);
+  overflow: scroll;
+  transition: all 0.2s ease-in-out;
+}
+
+.history-more {
+  color: white;
+  display: block;
+  position: relative;
+  text-align: right;
+  padding-right: 36px;
+  left: 0;
+  width: 100%;
+  font-size: 12px;
+  font-family: 'S-CoreDream-1Thin';
+  transition: all 0.2s ease-in-out;
+  width: fit-content;
+  margin-left: auto;
+  user-select: none;
+}
+
+.history-more.active {
+  color: #aaa;
+}
+
+.user-alarm {
+  display: flex;
+  color: white;
+  font-family: 'S-CoreDream-4Regular';
+  position: relative;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  font-size: 17px;
+  height: 50px;
+  padding-left: 49px;
+  align-items: center;
+  user-select: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.alarm-number {
+  min-width: 22px;
+  justify-content: center;
+  background-color: white;
+  border-radius: 10px;
+  margin-left: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
+  width: fit-content;
+  height: 20px;
+  align-items: center;
+  display: flex;
+  color: red;
+  font-weight: bold;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 10px;
+  text-align: center;
+}
+
+.user-notice {
+  display: flex;
+  color: white;
+  font-family: 'S-CoreDream-4Regular';
+  position: relative;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  font-size: 17px;
+  height: 50px;
+  padding-left: 49px;
+  align-items: center;
+  user-select: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.user-alarm:hover, .user-notice:hover {
+  background-color: hsla(0, 0%, 100%, 0.2);
+  cursor: pointer;
+}
+
+.user-sidebar:before {
+  content: " ";
+  position: absolute;
+  right: 0;
+  width: 250px;
+  height: 100vh;
+  filter: blur(10px) brightness(0.9);
+  background-image: url(/images/main-img.jpg);
+  background-size: cover;
+  background-position: -79px 0px;
+  background-repeat: no-repeat;
+}
+
+.page-user-edit {
+  display: grid;
+  grid-template-columns: auto 260px;
+  min-width: 100vw;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.page-user-edit .user-sidebar-content{
+  user-select: none;
+  opacity: 0.2;
+  pointer-events: none;
+}
+
+.user-edit-section {
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+}
+
+.edit-title {
+  margin-bottom: 5vw;
+  margin-left: 11vw;
+  margin-top: 16vh;
+  font-family: 'S-CoreDream-4Regular';
+  font-size: 2.3em;
+  height: fit-content;
+}
+
+.hr {
+  border-top: solid 1px rgba(24, 24, 24, 0.2);
+  margin-left: 11vw;
+  width: 26vw;
+}
+
+.user-delete {
+  background-color: transparent;
+  color: gray;
+  border: 0;
+  margin-left: 11vw;
+  font-size: 14px;
+}
+
+.user-delete:hover {
+  background-color: transparent;
+  color: gray;
+}
+
+.edit-back {
+  margin-left: auto;
+  margin-right: 50px;
+  color: gray;
+  background-color: transparent;
+  font-size: 14px;
+}
+
+.edit_user {
+  margin-left: 11vw;
+}
+
+.edit_user .field {
+  font-family: 'S-CoreDream-4Regular';
+  padding-left: 20px;
+  width: 26vw;
+  min-height: 40px;
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 12px;
+  border: solid 1px rgba(24, 24, 24, 0.2);
+  
+  input:not(.user-edit-btn) {
+    min-height: 40px;
+    border: 0;
+    margin: 0;
+  }
+}
+
+.user-edit-btn {
+  width: 26vw;
+  height: 40px;
+  background-color: #ff4555;
+  outline: none;
+  border: 0;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.user-edit-btn:active, .user-edit-btn:focus {
+  background-color: hsl(355, 100%, 44%) !important;
+  outline: none !important;
+  border: 0 !important;
+  box-shadow: none !important;
+}
+
+.user-edit-btn:hover {
+  background-color: hsl(355, 100%, 44%);
+  outline: none;
+}
+
+.modal-wrap {
+  min-width: 100vw;
+  height: 100vh;
+  background-color: hsla(0, 0%, 100%, 0.4);
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  font-family: 'S-CoreDream-2ExtraLight';
+  width: 460px;
+  height: 540px;
+  overflow: hidden;
+  
+  h1 {
+    font-family: 'S-CoreDream-2ExtraLight';
+    font-size: 1.3em;
+    margin: 0 auto;
+    width: 320px;
+    margin-top: 85px;
+    margin-bottom: 30px;
+    line-height: 200%;
+  }
+  
+  .url {
+    font-family: 'S-CoreDream-2ExtraLight';
+    width: 320px;
+    margin: 0 auto;
+    border: 0;
+    font-size: 1.2em;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ff4555;
+  }
+  
+  .modal-bottom {
+    padding: 0;
+    position: relative;
+    height: 178px;
+    margin-top: 130px;
+    background-color: #f0f0f0;
+    
+    h2 {
+      font-size: 1em;
+      position: absolute;
+      top: 45px;
+      left: 0;
+      margin-left: 25px;
+      font-family: 'S-CoreDream-2ExtraLight';
+    }
+    
+    h3 {
+      font-size: 0.8em;
+      position: absolute;
+      top: 75px;
+      left: 25px;
+      width: 100%;
+      font-family: 'S-CoreDream-1Thin';
+      color: gray;
+      list-style: none;
+      max-height: 250px;
+      overflow: hidden;
+      margin: 0;
+      transition: all 0.2s ease-in-out;
+    }
+    
+    .history-list li, .history-list li a {
+      color: white;
+      height: 20px;
+      margin-bottom: 5px;
+      transition: all 0.2s ease-in-out;
+      font-size: 15px;
+    }
+    
+    .history-list li a:hover {
+      text-decoration: none;
+      color: #aaa;
+      cursor: pointer;
+    }
+    
+    .history-list.active {
+      max-height: none;
+      height: calc(100% - 100px);
+      overflow: scroll;
+      transition: all 0.2s ease-in-out;
+      margin-left: 25px;
+      font-family: 'S-CoreDream-2ExtraLight';
+    }
+    
+    .dumy-title-1 {
+      background-color: transparent;
+      border: 0;
+      position: absolute;
+      left: 0;
+      top: 100px;
+      font-size: 0.8em;
+      color: gray;
+      width: 300px;
+      border-bottom: 1px solid gray;
+      margin-left: 25px;
+    }
+    
+    .dumy-title-2 {
+      background-color: transparent;
+      border: 0;
+      position: absolute;
+      left: 0;
+      top: 125px;
+      font-size: 0.8em;
+      color: gray;
+      width: 300px;
+      border-bottom: 1px solid gray;
+      margin-left: 25px;
+    }
+    
+    .dumy-btn {
+      position: absolute;
+      background-color: #ff4555;
+      color: white;
+      top: 96px;
+      right: 20px;
+      width: 80px;
+      height: 50px;
+      border: 0;
+      font-size: 1em;
+      font-family: 'S-CoreDream-2ExtraLight';
+    }
+    
+    .dumy-btn:hover {
+       background-color: hsl(355, 100%, 44%); 
+       cursor: pointer;
+    }
+  }
+}
+
+.page-search-password {
+  h2 {
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-top: 16vh;
+    font-family: 'S-CoreDream-4Regular';
+    font-size: 2.3em;
+    height: fit-content;
+  }  
+  
+  .input-email {
+    font-family: 'S-CoreDream-4Regular';
+    padding-left: 20px;
+    width: 26vw;
+    min-height: 40px;
+    margin-left: 0;
+    margin-right: auto;
+    margin-bottom: 12px;
+    border: solid 1px rgba(24, 24, 24, 0.2);
+    width: 500px;
+  }
+  
+  .actions {
+    float: left;
+    margin-left: 25px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .actions input {
+    background-color: transparent;
+    color: black;
+  }
+  
+  .back {
+    float: left;
+    color: #616161;
+    font-size: 12px;
+  }
+  
+  .btn-search-password {
+    border: 0;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: 'S-CoreDream-4Regular';
+  }
+  
+  .actions input:hover {
+    background-color: transparent;
+  }
+  
+  .new-user {
+    margin-left: 11vw;
+  }
+  
+  .btn-search-password:hover {
+    opacity: 0.7;
+  }
+}
+
+.page-post {
+  width: 100vw;
+  max-width: calc(87vw - 270px);
+  margin-right: auto;
+  margin-left: 9vw;
+  padding: 0;
+  position: relative;
+  top: -170px;
+  left: 0;
+  
+  .user-sidebar-content {
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
+  
+  .page-post-content {
+    display: grid;
+    grid-row-gap: 100px;
+    grid-template-columns: repeat(2, 30vw);
+    grid-template-rows: repeat(2, 30vw);
+    justify-content: space-between;
+    margin: 0;
+  }
+  
+  .crawling_add_box, .crawling_box {
+    min-width: 300px;
+  }
+  
+  .post-contain-box {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff4555;
+    display: flex;
+    align-items: center;
+    padding: 20px 50px;
+    word-break: keep-all;
+  }
+}
+
+
+.move-site {
+  color: #d0d0d0;
+}
+
+.move-site:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.accordion {
+  width: 100% !important;
+}
+
+.accordion:first-of-type {
+  bottom: 0;
+}
+
+.accordion:not(:first-of-type) {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .page-post-content {
+    grid-template-columns: 30vw !important;
+    min-height: 300px;
+  }
+}
+
+.crawling_add_box, .crawling_box {
+  transition: all 0.2s ease-in-out;
+}
+
+.crawling_add_box:hover {
+  box-shadow: none;
+}
+
+.crawling_box:hover {
+  box-shadow: 0 17px 50px rgba(0, 0, 0, 0.19), 0 12px 15px rgba(0, 0, 0, 0.24);
+  border: 1px solid #eee;
+}
+
+.collapse {
+  height: calc(30vw - 120px) !important;
+}
+
+.alarm-div {
+  display: grid;
+  grid-template-areas: "a b" "c d" "e f" "g h";
+  width: 100%;
+  margin: 0;
+}
