--- a/rails/app/views/devise/registrations/edit.html.erb
+++ b/rails/app/views/devise/registrations/edit.html.erb
@@ -1,54 +1,51 @@
-<div class="container devise_form">
-  <h2>개인정보 수정</h2>
+<div class="container devise_form page-user-edit">
+  <section class="user-edit-section">
+    <h2 class="edit-title">개인정보 수정</h2>
   
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
-  
-    <div class="field">
-      <%= f.label :"이메일" %><br />
-      <%= f.email_field :email, class: "devise_noborder", required: true, autofocus: true, autocomplete: "email" %>
-    </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
     
-    <div class="field">
-      <%= f.label :"닉네임" %><br />
-      <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true %>
-    </div>
-  
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div><%= resource.unconfirmed_email %> 계정에 대한 인증을 기다리고있습니다.</div>
-    <% end %>
-  
-    <div class="field">
-      <%= f.label :"현재 암호" %> <i>(정보 수정 시 입력해주세요.)</i><br />
-      <%= f.password_field :current_password, class: "devise_noborder", required: true, autocomplete: "off" %>
-    </div>
-  
-    <div class="field">
-      <%= f.label :"변경할 암호" %> <i>(암호 변경을 안할 시 입력하지 않으셔도 됩니다.)</i><br />
-      <%= f.password_field :password, class: "devise_noborder", autocomplete: "off" %>
-      <% if @minimum_password_length %>
-        <br />
-        <em>최소 <%= @minimum_password_length %>글자 이상</em>
+      <div class="field">
+        <%= f.email_field :email, class: "devise_noborder", required: true, autofocus: true, autocomplete: "email", placeholder: "ID"  %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :nickname, class: "devise_noborder", required: true, autofocus: true, placeholder: "Username" %>
+      </div>
+    
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div><%= resource.unconfirmed_email %> 계정에 대한 인증을 기다리고있습니다.</div>
       <% end %>
-    </div>
-  
-    <div class="field">
-      <%= f.label :"변경할 암호 재 확인" %><br />
-      <%= f.password_field :password_confirmation, class: "devise_noborder", required: true, autocomplete: "off" %>
-    </div>
-  
-    <div class="actions">
-      <%= f.submit "정보 변경", class: "btn btn-sm btn-info" %>
-    </div>
-  <% end %>
-  
-  <h3>Very Danger Zone</h3>
-  
-  <p>회원탈퇴 진행 <%= button_to "회원 탈퇴", registration_path(resource_name), class: "btn btn-sm btn-danger", data: { confirm: "회원탈퇴 시 게시글, 쪽지기록 등 개인정보 이력이 다 삭제됩니다. 정말 탈퇴하시겠습니까?" }, method: :delete %></p>
-  
-  <%= link_to "이전으로", :back %>
-  
-  <div style="margin-top: 30px" align="center">
-    <%= render "devise/shared/info" %>
-  </div>
+      
+      <div class="field">
+        <%= f.text_field :phone_number, class: "devise_noborder", required: true, autofocus: true, placeholder: "Phone" %>
+      </div>
+    
+      <div class="field">
+        <%= f.password_field :current_password, class: "devise_noborder", required: true, autocomplete: "off", placeholder: "Current Password" %>
+      </div>
+    
+      <div class="field">
+        <%= f.password_field :password, class: "devise_noborder", autocomplete: "off", placeholder: "New Password" %>
+        <% if @minimum_password_length %>
+          <!--<br />-->
+          <!--<em>최소 <%= @minimum_password_length %>글자 이상</em>-->
+        <% end %>
+      </div>
+    
+      <div class="field">
+        <%= f.password_field :password_confirmation, class: "devise_noborder", required: true, autocomplete: "off", placeholder: "Password Confirm" %>
+      </div>
+    
+      <div class="actions">
+        <%= f.submit "정보 변경", class: "btn btn-sm btn-info user-edit-btn" %>
+      </div>
+    <% end %>
+    
+    <div class="hr"></div>
+    
+    <%= button_to "회원 탈퇴", registration_path(resource_name), class: "btn btn-sm btn-danger user-delete", data: { confirm: "회원탈퇴 시 게시글, 쪽지기록 등 개인정보 이력이 다 삭제됩니다. 정말 탈퇴하시겠습니까?" }, method: :delete %>
+    <%= link_to "이전으로", :back, class: "edit-back" %>
+  </section>
+  <%= render "devise/shared/sidebar" %>
 </div>
