--- a/rails/app/views/posts/index/_index_main.html.erb
+++ b/rails/app/views/posts/index/_index_main.html.erb
@@ -4,6 +4,7 @@
         <div class="col-md-4 crawling_add_box" style="margin-left: 10px;">
             <div style="margin-top: 50px;">
                 <%= link_to "카테고리 내 원하는 컨텐츠가 없나요?", "/", style: "color: white; text-decoration: none;" %>
+                <div style="width: 100%; margin-left: -70px; color: white; position: absolute; text-align: right; font-size: 60px;"><i class="fas fa-mouse-pointer"></i></div>
             </div>
         </div>
         <% @posts.first(1).each do |t| %>
